[package]
name = "test-suite"
version = "1.0.0"
edition = "2021"
description = "A CLI tool for running UCI chess engines on EPD test suites"
authors = ["Cosmo Bobak"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }

[profile.release]
lto = true